--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,12 @@
     "default_icon": "images/vittore.png",
     "default_popup": "popup.html"
   },
+  "icons": {
+    "16": "images/vittore.png",
+    "48": "images/vittore.png",
+    "128":"images/vittore.png"
+
+  },
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/"
